<resources>
    <string name="app_name">Birthday Text Automation</string>
    <string name="time_prefix">Messages will be sent at:</string>
    <string name="default_time">09:00</string>
    <string name="running">Status: Running</string>
    <string name="disabled">Status: Disabled</string>
    <string name="disable_action">Disable all automatic messages</string>
    <string name="enable_action">Start automatic messages</string>
    <string name="upcoming_birthdays">Upcoming Birthdays</string>
    <string name="default_message_prefix">Your messages will look like:</string>
    <string name="default_message_comma">Happy Birthday, %s!</string>
    <string name="default_message_no_comma">Happy Birthday!</string>
    <string name="first_name_switch">Include first name:</string>
    <string name="include_name_instruction">Tap message to add or remove first name</string>
    <string name="tab_home">Home</string>
    <string name="tab_contacts">Contacts</string>
    <plurals name="time_header">
        <item quantity="one">%d contact will get a birthday text on their birthday at:</item>
        <item quantity="other">%d contacts will get a birthday text on their birthday at:</item>
    </plurals>
</resources>
