<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="2dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            android:gravity="center"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_prefix"
                android:text="@string/time_prefix"
                android:textColor="#000"
                android:textSize="19sp"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:textAlignment="center"/>

        <TextView
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:id="@+id/time_input"
                android:text="@string/default_time"
                android:textColor="#000"
                android:textSize="30sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:textAlignment="center"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status"
                android:textColor="#808080"
                android:textStyle="italic"
                android:textSize="15sp"
                android:text="@string/running"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAlignment="center"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>